NIFI-12707: Allow LookupRecord to operate on multiple child-records; in order to accommodate this, also needed to improve DataTypeUtils so that it knows that Record A is wider than Record B if Record A contains all fields of Record B and more.